修补bug